--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,11 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" 
 	  xmlns:th="http://www.thymeleaf.org">
 <th:block th:include="include/header"></th:block>
 
 <body>
  <th:block th:include="include/nav"></th:block>
-	
 	<!-- breadcrumb start-->
     <section class="breadcrumb breadcrumb_bg">
         <div class="container">
@@ -14,7 +13,7 @@
                     <div class="breadcrumb_iner text-center">
                         <div class="breadcrumb_iner_item">
 							<h2>Elements</h2>
-                            <p>Home <span>//</span>Elements</p>
+                            <p>Home <span>//</span>로그인</p>
                         </div>
                     </div>
                 </div>
@@ -22,39 +21,45 @@
         </div>
     </section>
 	<!-- End banner Area -->
-
+	
 	<div class="whole-wrap">
 		<div class="container box_1170">
-			
-			
-			
-			
+
 			<div class="section-top-border">
-				<h3 class="mb-30">Table</h3>
-				<div class="progress-table-wrap">
-					<div class="progress-table">
-						<div class="table-head">
-							<div class="serial">#</div>
-							<div class="country">UserID</div>
-							<div class="visit">Name</div>
-							<div class="percentage">Company</div>
-						</div>
-						<div th:each="user : ${users}">
-						<div class="table-row">
-							<div class="serial">01</div>
-							<div class="country"><span th:text="${user.userId}"></span></div>
-							<div class="visit"><span th:text="${user.name}"></span></div>
-							<div class="percentage"><span th:text="${user.name}"></span></div>
-						</div>
-						</div>						
+				<div class="row">
+					<div class="col-lg-2 col-md-2 mt-sm-30">
+					</div>
+					<div class="col-lg-8 col-md-8">
+						<h3 class="mb-30">회원가입</h3>
+						<!-- 
+						<form th:action="@{'/login'}" th:method="post">
+						 -->
+						<form action="/users" method="post" id="register_form">
+							<div class="mt-10">
+								<input type="text" name="userId" placeholder="사용자 아이디" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 아이디'" required="" class="single-input">
+							</div>
+							<div class="mt-10">
+								<input type="password" name="userPw" placeholder="사용자 암호" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 암호'" required="" class="single-input">
+							</div>
+														<div class="mt-10">
+								<input type="text" name="userPw" placeholder="사용자 이름" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 이름'" required="" class="single-input">
+							</div>
+														<div class="mt-10">
+								<input type="text" name="userPw" placeholder="사용자 회사" onfocus="this.placeholder = ''" onblur="this.placeholder = '사용자 회사'" required="" class="single-input">
+							</div>
+							<div class="form-group mt-3">
+				              <button type="submit" class="button button-contactForm btn_4">
+				              	회원가입</button>
+				            </div>
+						</form>
+					</div>
+					<div class="col-lg-2 col-md-2 mt-sm-30">
 					</div>
 				</div>
 			</div>
-			
-			
-			
 		</div>
 	</div>
+	
 	<!-- footer part start-->
     <footer class="footer-area">
         <div class="container">
